# sqlite-graph

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  graph.rs  lib.rs  types.rs
src/storage/: migrations.rs  mod.rs  sqlite.rs
tests/: graph_test.rs
