[package]
name = "sqlite-graph"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rohansx/sqlite-graph"
description = "An embeddable graph database built on SQLite — recursive CTEs, bi-temporal edges, FTS5 search, and vector fusion in a single file"
keywords = ["graph", "sqlite", "knowledge-graph", "database", "embedded"]
categories = ["database", "data-structures"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.34", features = ["bundled", "column_decltype"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
thiserror = "2"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3.27.0"
